--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-						<a href="">
+						<a href="books/how-to-contribute/_book">
 							<h2>贡献你的公开课</h2>
 							<div class="content">
 								<p>
