--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 				<!-- Logo -->
 				<a href="index.html" class="logo">
-					<span class="symbol"><img src="images/favicon.png" alt="" /></span><span class="title">HeckPsi Education</span>
+					<span class="symbol"><img src="images/favicon.png" alt="" /></span><span class="title">HeckPsi Education<sup>[BETA]</sup></span>
 				</a>
 
 				<!-- Nav -->
@@ -77,7 +77,7 @@
 									<br />
 									创建：2016 年 4 月 23 日
 									<br />
-									更新：2016 年 4 月 23 日
+									更新：2016 年 4 月 24 日
 								</p>
 							</div>
 						</a>
